added interactivity to the ul in the header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!--changed title-->
+    <title>Horiseon Social Solution Services</title>
 </head>
 
 <body>
-    <!--Renamed div element to header element-->
+    <!--renamed div element to header element-->
+    <!--removed secondary div element-->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
             <ul>
